--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@babel/plugin-transform-react-jsx": "^7.16.0",
     "@types/babel__core": "^7.1.16",
     "@types/cookie-session": "^2.0.43",
+    "@types/uuid": "^8.3.3",
     "bcryptjs": "^2.4.3",
-    "chance": "^1.1.8",
     "cookie-session": "^1.4.0",
     "escape-html": "^1.0.3",
     "express": "^4.17.1",
     "markdown-it": "^12.2.0",
     "source-map-support": "^0.5.21",
+    "uuid": "^8.3.2",
     "vm2": "^3.9.5"
   },
   "nodemonConfig": {
@@ -34,7 +35,6 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/chance": "^1.1.3",
     "@types/escape-html": "^1.0.1",
     "@types/express": "^4.17.13",
     "@types/markdown-it": "^12.2.3",
