--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "express": "^4.17.1",
     "markdown-it": "^12.2.0",
     "source-map-support": "^0.5.21",
-    "uuid": "^8.3.2",
-    "vm2": "^3.9.5"
+    "uuid": "^8.3.2"
   },
   "nodemonConfig": {
     "watch": [
