--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/cookie-session": "^2.0.43",
     "@types/uuid": "^8.3.3",
+    "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^1.4.0",
     "escape-html": "^1.0.3",
@@ -32,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "@types/basic-auth": "^1.1.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/escape-html": "^1.0.1",
     "@types/express": "^4.17.13",
