--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "author": "Steven Degutis",
   "license": "TBD",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.45.0",
     "@types/cookie-session": "^2.0.43",
     "@types/uuid": "^8.3.3",
     "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^1.4.0",
+    "dotenv": "^10.0.0",
     "escape-html": "^1.0.3",
     "express": "^4.17.1",
     "markdown-it": "^12.2.0",
