--- a/package.json
+++ b/package.json
@@ -1,26 +1,42 @@
 {
   "name": "immaculatalibrary-v3",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "version": "2.0.0",
+  "description": "A simple TypeScript web framework",
+  "main": "out/index.js",
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc --watch",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PurityLib/Purity.git"
+  },
   "keywords": [],
   "author": "Steven Degutis",
-  "license": "TBD",
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.45.0",
-    "@puritylib/purity": "file:../Purity",
-    "bcryptjs": "^2.4.3",
-    "cookie-session": "^1.4.0",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "markdown-it": "^12.2.0"
+  "license": "Custom MIT",
+  "bugs": {
+    "url": "https://github.com/PurityLib/Purity/issues"
   },
+  "homepage": "https://github.com/PurityLib/Purity#readme",
   "devDependencies": {
+    "@types/node": "^17.0.8",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.13",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^16.11.10",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.45.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-session": "^1.4.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "markdown-it": "^12.2.0",
+    "sucrase": "^3.20.3"
+  },
+  "optionalDependencies": {
+    "@aws-sdk/client-s3": "^3.46.0"
   }
 }
