--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "immaculatalibrary-v3",
   "version": "2.0.0",
   "description": "A simple TypeScript web framework",
-  "main": "out/index.js",
+  "main": "out/main.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
@@ -20,20 +20,20 @@
   },
   "homepage": "https://github.com/PurityLib/Purity#readme",
   "devDependencies": {
-    "@types/node": "^17.0.8",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.13",
     "@types/markdown-it": "^12.2.3",
+    "@types/node": "^17.0.8",
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.45.0",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^1.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "markdown-it": "^12.2.0",
+    "source-map-support": "^0.5.21",
     "sucrase": "^3.20.3"
   },
   "optionalDependencies": {
