--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "target": "ES2020", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "lib": [
-      "ES2020"
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
     ], /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     "module": "CommonJS", /* Specify what module code is generated. */
     "declaration": true,
