--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/js-yaml": "^4.0.5",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^17.0.8",
     "typescript": "^4.5.4"
@@ -30,6 +31,7 @@
     "bcryptjs": "^2.4.3",
     "chokidar": "^3.5.2",
     "express": "^4.17.1",
+    "js-yaml": "^4.1.0",
     "markdown-it": "^12.2.0",
     "source-map-support": "^0.5.21",
     "sucrase": "^3.20.3"
