--- a/data/tsconfig.json
+++ b/data/tsconfig.json
@@ -15,6 +15,7 @@
     "forceConsistentCasingInFileNames": true, /* Ensure that casing is correct in imports. */
     "strict": true, /* Enable all strict type-checking options. */
     "noImplicitAny": true, /* Enable error reporting for expressions and declarations with an implied `any` type.. */
+    "downlevelIteration": true,
     // "noUnusedLocals": true,                           /* Enable error reporting when a local variables aren't read. */
     // "noUnusedParameters": true,                       /* Raise an error when a function parameter isn't read */
     "exactOptionalPropertyTypes": true, /* Interpret optional property types as written, rather than adding 'undefined'. */
