--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.13",
     "@types/js-yaml": "^4.0.5",
     "@types/markdown-it": "^12.2.3",
+    "@types/mime": "^2.0.3",
     "@types/node": "^17.0.8",
     "typescript": "^4.5.4"
   },
@@ -33,6 +34,7 @@
     "express": "^4.17.1",
     "js-yaml": "^4.1.0",
     "markdown-it": "^12.2.0",
+    "mime": "^3.0.0",
     "source-map-support": "^0.5.21",
     "sucrase": "^3.20.3"
   }
