--- a/data/tsconfig.json
+++ b/data/tsconfig.json
@@ -8,6 +8,7 @@
     "jsx": "preserve",
     "target": "ES2020",
     "noEmit": true,
+    "moduleResolution": "Node",
     "paths": {
       "/*": [
         "./*"
