Almost ready for login.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "chokidar": "^3.5.2",
+    "dotenv": "^14.3.0",
     "express": "^4.17.1",
     "js-yaml": "^4.1.0",
     "luxon": "^2.3.0",
