--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "luxon": "^2.3.0",
     "markdown-it": "^12.2.0",
     "mime": "^3.0.0",
+    "mkdirp": "^3.0.1",
     "rimraf": "^5.0.1",
     "source-map-support": "^0.5.21",
     "sucrase": "^3.20.3",
