--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/js-yaml": "^4.0.5",
     "@types/luxon": "^2.0.9",
     "@types/markdown-it": "^12.2.3",
+    "@types/mime": "^2.0.3",
     "@types/node": "^17.0.8",
     "typescript": "^4.5.4"
   },
@@ -31,6 +32,7 @@
     "js-yaml": "^4.1.0",
     "luxon": "^2.3.0",
     "markdown-it": "^12.2.0",
+    "mime": "^3.0.0",
     "source-map-support": "^0.5.21",
     "sucrase": "^3.20.3"
   }
