--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "immaculatalibrary",
   "version": "2.0.0",
   "description": "My website.",
-  "main": "out/main.js",
+  "module": "out/main.js",
+  "type": "module",
   "scripts": {
     "generate": "node out/generate.js",
     "build": "tsc --build",
