--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -9,6 +9,7 @@
     ], /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     "module": "CommonJS", /* Specify what module code is generated. */
     "declaration": true,
+    "allowSyntheticDefaultImports": false,
     "rootDir": "./", /* Specify the root folder within your source files. */
     "moduleResolution": "node", /* Specify how TypeScript looks up a file from a given module specifier. */
     "sourceMap": true, /* Create source map files for emitted JavaScript files. */
