--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "module": "out/main.js",
   "type": "module",
   "scripts": {
-    "generate": "node out/generate.js",
+    "generate": "node --experimental-vm-modules out/generate.js",
     "build": "tsc --build",
     "watch": "tsc --build --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
