--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/markdown-it": "^14.1.1",
     "@types/node": "^20.14.2",
+    "monaco-editor": "^0.43.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
