--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "keywords": [],
   "author": "Steven Degutis",
-  "license": "Custom MIT",
+  "license": "",
   "bugs": {
     "url": "https://github.com/sdegutis/immaculatalibrary.com/issues"
   },
