--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
       "DOM",
       "DOM.Iterable",
     ],
+    "types": [
+      "@types/wicg-file-system-access"
+    ],
     "jsx": "react-native",
     "target": "ESNext",
     "noEmit": true,
