--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/sdegutis/immaculatalibrary.com#readme",
   "devDependencies": {
+    "@types/eases": "^1.0.4",
     "@types/js-yaml": "^4.0.9",
     "@types/markdown-it": "^14.1.1",
     "@types/node": "^20.14.2",
