--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My website.",
   "module": "out/main.js",
   "scripts": {
-    "generate": "node --experimental-vm-modules out/generate.js",
+    "generate": "env IMLIB_SITEBASE=https://www.immaculatalibrary.com node --experimental-vm-modules out/generate.js",
     "build": "tsc --build",
     "watch": "tsc --build --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
