--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,4 +31,9 @@
     "noPropertyAccessFromIndexSignature": true, /* Enforces using indexed accessors for keys declared using an indexed type */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
   },
+  "include": [
+    "./libs.d.ts",
+    "./site/**/*.ts",
+    "./site/**/*.tsx",
+  ]
 }
