--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@imlib/core": "^2.2.2",
+    "@imlib/runtimetypes": "^0.0.1",
     "js-yaml": "^4.1.0",
     "markdown-it": "^14.1.0"
   }
