--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "allowSyntheticDefaultImports": false,
     "types": [
       "node",
-      "@imlib/core"
+      "@imlib/runtimetypes"
     ],
     "moduleResolution": "Node",
     "module": "ES2022",
