--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "typescript.preferences.importModuleSpecifierEnding": "js",
   "task.allowAutomaticTasks": "on",
-  "typescript.tsdk": "node_modules\\typescript\\lib"
+  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "emmet.showExpandedAbbreviation": "inMarkupAndStylesheetFilesOnly",
 }
