--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/markdown-it": "^14.1.1",
     "@types/node": "^20.14.13",
+    "idb-keyval": "^6.2.1",
     "monaco-editor": "^0.43.0",
     "typescript": "^5.5.2"
   },
