--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@types/node": "^20.14.13",
     "idb-keyval": "^6.2.1",
     "monaco-editor": "^0.43.0",
-    "typescript": "^5.5.2"
+    "typescript": "^5.6.0-beta"
   },
   "dependencies": {
-    "@imlib/core": "^2.5.8",
+    "@imlib/core": "^2.5.9",
     "@imlib/monaco-esm": "^0.0.2",
     "js-yaml": "^4.1.0",
     "markdown-it": "^14.1.0"
