Use vanilla JSX.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,18 +7,18 @@
     ],
     "jsx": "react-native",
     "target": "ESNext",
-    "noEmit": true,
+    "module": "ESNext",
     "rootDir": "site",
+    "noEmit": true,
+    "moduleResolution": "Node",
     "types": [
       "node",
       "@imlib/core/runtime.d.ts"
     ],
-    "moduleResolution": "Node",
-    "module": "ES2022",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitAny": true,
-    "downlevelIteration": true,
+    // "downlevelIteration": true,
     "exactOptionalPropertyTypes": true,
     "esModuleInterop": true,
     "noImplicitReturns": true,
@@ -26,6 +26,6 @@
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
-    "skipLibCheck": true,
+    // "skipLibCheck": true,
   },
 }
