--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "typescript": "^5.6.0-beta"
   },
   "dependencies": {
-    "@imlib/core": "^3.0.0-beta2",
+    "@imlib/core": "^3.0.0",
     "@imlib/monaco-esm": "github:sdegutis/imlib-monaco-esm",
     "js-yaml": "^4.1.0",
     "markdown-it": "^14.1.0"
