--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
+          name: my-artifact
           path: 'docs'
 
   deploy:
