--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My website.",
   "main": "out/main.js",
   "scripts": {
-    "generate": "imlib generate",
+    "generate": "immaculata generate",
     "watch": "tsc --watch"
   },
   "repository": {
@@ -28,7 +28,7 @@
     "typescript": "^5.6.0-beta"
   },
   "dependencies": {
-    "@imlib/core": "^3.3.1",
+    "immaculata": "^0.0.3",
     "js-yaml": "^4.1.0",
     "markdown-it": "^14.1.0"
   }
