Use newer imlib.

--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "generate": "immaculata generate",
     "watch": "tsc --watch"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sdegutis/immaculatalibrary.com.git"
   },
-  "keywords": [],
+  "keywords": [ ],
   "author": "Steven Degutis",
   "license": "",
   "bugs": {
