--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,13 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "node",
       "name": "Launch Program",
-      "program": "${workspaceFolder}/node_modules/immaculata/out/cli.js",
-      "args": [
-        "dev"
-      ],
       "request": "launch",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "type": "node"
+      "program": "${workspaceFolder}/node_modules/immaculata/src/cli.ts",
+      "args": [ "dev" ],
+      "runtimeArgs": [ "--disable-warning=ExperimentalWarning" ],
+      "skipFiles": [ "<node_internals>/**" ],
     }
   ]
 }
