--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "rootDir": "site",
     "noEmit": true,
     "moduleResolution": "Node",
+    "allowImportingTsExtensions": true,
     "types": [
       "node",
       "immaculata/runtime.d.ts"
