--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,8 @@
       "type": "node",
       "name": "Launch Program",
       "request": "launch",
-      "program": "${workspaceFolder}/node_modules/immaculata/src/cli.ts",
-      "args": [ "dev" ],
-      "runtimeArgs": [ "--disable-warning=ExperimentalWarning" ],
+      "program": "${workspaceFolder}/main.ts",
+      "runtimeArgs": [ "--disable-warning=ExperimentalWarning", "--watch" ],
       "skipFiles": [ "<node_internals>/**" ],
     }
   ]
