--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My website.",
   "main": "out/main.js",
   "scripts": {
-    "generate": "immaculata generate",
+    "generate": "node main.ts generate",
     "watch": "tsc --watch"
   },
   "type": "module",
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/sdegutis/immaculatalibrary.com.git"
   },
-  "keywords": [],
+  "keywords": [ ],
   "author": "Steven Degutis",
   "license": "",
   "bugs": {
