--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/sdegutis/immaculatalibrary.com.git"
   },
-  "keywords": [ ],
+  "keywords": [],
   "author": "Steven Degutis",
   "license": "",
   "bugs": {
@@ -29,6 +29,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@swc/core": "^1.11.16",
     "immaculata": "^0.1.3",
     "js-yaml": "^4.1.0",
     "markdown-it": "^14.1.0"
