--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,10 @@
     ],
     "jsx": "react-native",
     "target": "ESNext",
-    "module": "ESNext",
+    "module": "NodeNext",
     "rootDir": ".",
     "noEmit": true,
-    "moduleResolution": "Node",
+    "moduleResolution": "nodenext",
     "allowImportingTsExtensions": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
